# scorewright

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  run_bench.py
benchmarks/results/: result_2026-05-23.json  result_2026-05-24.json
benchmarks/tasks/: README.md
examples/openevolve_fib/: README.md  run_example.py
examples/openevolve_fib/candidate/: fib.py  test_fib.py
src/scorewright/: __init__.py  _pricing.py  scorer.py  types.py
src/scorewright/adapters/: __init__.py  openevolve.py
src/scorewright/sandbox/: __init__.py  _microsandbox.py  base.py  subprocess.py
src/scorewright/scorers/: __init__.py  anti_gaming.py  correctness.py  cost.py  llm_judge.py  perf.py
tests/: helpers.py  test_adapter_openevolve.py  test_anti_gaming.py  test_correctness.py  test_cost.py  test_llm_judge.py  test_perf.py  test_sandbox_microsandbox.py  test_sandbox_subprocess.py  test_scorer.py  test_types.py
